# etl-project-structure-proposal

./: .gitignore  README.md  pyproject.toml  test.md
src/dzdexample/: config.py  log.py  main.py  utils.py
src/dzdexample/database/: README.md  _connection.py  patient_crud.py
src/dzdexample/model/: Patient.py  patient.py
src/plisetl/: config.py  log.py  main.py  plis_etl_process.py  utils.py
src/plisetl/database/: _connection.py  caresite_crud.py  person_crud.py
src/plisetl/import_model/: Personenvariablen.py  _plis_csv_base.py
src/plisetl/transformator/: README.md  caresite.py  person.py
tests/dev_angela/: README.md  test_care_sites.env  test_care_sites.py  test_utils.py
tests/dev_tim/: test_care_sites.env  test_care_sites.py  test_utils.py
