[project]
name = "generic-python-project-template"
version = "0.1.0"
description = "A template for the DZD Datamanagement"
authors = [
    {name = "Tim Bleimehl", email = "bleimehl@dzd-ev.org"},
]
dependencies = ["pydantic>=2.10.6", "pydantic-settings>=2.7.1", "sqlmodel>=0.0.22"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
